# Travel-AI-Agent

backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  agent_graph.py  deps.py  main.py
backend/api/schemas/: __init__.py  agent.py
backend/workflow/: agent.py  agent_state.py  constants.py  model.py  prompts.py  tool_manager.py  utils.py
backend/workflow/constant/: __init__.py  fallback_messages.py  node_names.py
backend/workflow/model/: __init__.py  chat_message.py  follow_up_question.py  hotel_restaurant_search.py  planner.py  query_generator.py  things_to_do.py  travel_route.py  travel_timing.py  travel_tips.py
backend/workflow/observability/: langfuse_runtime_config.py  tracing.py
backend/workflow/prompts/: __init__.py  emergency_travel_assistant.py  follow_up_question.py  guardrails.py  hotel_search_prompt.py  intent_classifier.py  route_extractor.py  search_query_generator.py  system_instruction.py  things_to_do_extractor.py  timing_extractor.py  tips_extractor.py  trip_planner.py
backend/workflow/services/: __init__.py  caching.py  llm.py  tavily.py
backend/workflow/tools/: __init__.py  estimate_trip_cost.py  generate_itinerary.py  get_local_attractions.py  get_place_pictures.py  get_travel_requirements.py  get_weather.py  packing_suggestions.py  search_flights.py  search_hotels.py  search_restaurants.py
backend/workflow/utils/: logger.py  safe_llm_decorator.py  utils.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: page.tsx
frontend/src/components/: FollowUpQuestions.tsx  (+3 more)
(+2 files in other folders)
